@@ -336,7 +336,7 @@ void TriangleMeshTerrain::do_terrain(const ParametersTerrain& parameters)
 TriangleMeshTerrainPlanet::TriangleMeshTerrainPlanet(const ParametersTerrain& parameters,Progress* progress)
   :TriangleMesh(progress)
   ,TriangleMeshTerrain(progress)
-  ,TriangleMeshSubdividedIcosahedron(1.0+parameters.variation.z*parameters.base_height,parameters.subdivisions,parameters.subdivisions_unperturbed,parameters.subdivisions_seed,parameters.variation,progress)
+  ,TriangleMeshSubdividedIcosahedron(1.0+parameters.variation.z*parameters.base_height,parameters.subdivisions,parameters.subdivisions_unperturbed,parameters.terrain_seed,parameters.variation,progress)
 {
   do_terrain(parameters);
 }
@@ -378,7 +378,7 @@ bool TriangleMeshTerrainPlanet::write_povray(const std::string& base_filename,co
 TriangleMeshTerrainFlat::TriangleMeshTerrainFlat(const ParametersTerrain& parameters,Progress* progress)
   :TriangleMesh(progress)
   ,TriangleMeshTerrain(progress)
-  ,TriangleMeshFlatTriangle(parameters.variation.z*parameters.base_height,parameters.subdivisions_seed,progress)
+  ,TriangleMeshFlatTriangle(parameters.variation.z*parameters.base_height,parameters.terrain_seed,progress)
 {
   subdivide(parameters.subdivisions,parameters.subdivisions_unperturbed,parameters.variation);
 
